Доработки по фронту

--- a/routeIs/Views/Account/Register.cshtml
+++ b/routeIs/Views/Account/Register.cshtml
@@ -21,7 +21,7 @@
             <span asp-validation-for="ConfirmPassword" />
         </div>
         <div>
-            <label asp-for="Surnname">Введите фамилию</label><br />
+            <label asp-for="Surname">Введите фамилию</label><br />
             <input type="text" asp-for="Surname" />
         </div>
         <div>
